Fixed cloned element’s overlapping.

--- a/src/app/styles/list.css
+++ b/src/app/styles/list.css
@@ -119,3 +119,11 @@
 #sandbox .g-panel {
     overflow: auto;
 }
+
+#sandbox .example-example {
+    margin: 0;
+}
+
+#sandbox .b-example {
+    padding-top: 0;
+}
